2004-05-08  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.6.0.99.

2004-05-08  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/images/Makefile.am:
	* data/images/muine-default-cover.png:
	* data/images/muine-playlist.png:
	* data/images/muine-tray-paused.png:
	* data/images/muine-tray-playing.png:
	* data/images/muine.png:
	* src/Makefile.am:
	* src/Muine.cs:

	New logo.

2004-05-06  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Release 0.6.0.

2004-05-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/CoverImage.cs:

	Only enable cover dnd when the covers are done loading.

2004-05-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Only show the "Drop here" tooltip when the coverdb is finished loading.

2004-05-05  Peter Johanson  <latexer@gentoo.org>
            Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/Makefile.am:
	A src/muine.exe.config.in:
	* src/muine.in:

	Support latest Mono and Gtk#.

2004-05-01  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-28  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Optimize closing windows.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Song.cs:

	Refactor sort & search key generation.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Use an idle for performing the searches. Searching is much more
	responsive now.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Include album name in search key.

2004-04-26  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* libmuine/player-xine.c: (load_audio_out_driver),
	(player_construct):

	Load audio driver from xine-config.

2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>